# zenoh-iftdt-demo

./: .gitignore  Cargo.toml  README.md  dataflow-luminosity-debug.yml  dataflow.yml  loader-config.yml  py-sink.py  run-cuda.sh  run-debug.sh
alexa-lambda-skill/: README.md  lambda.py
alexa-sink/: alexa-sink.py
camera-source/: camera.py
face-detect/: detect.py
light-sensor-source/src/: main.ino
loader/: Cargo.toml
loader/src/: lib.rs
luminosity-normalization/: normalization.py
luminosity-source-bridge/: bridge.py
py-test/: Cargo.toml
py-test/src/: main.rs
recognition/: architecture.py  recog.py
sensor-fusion/: sensor-fusion.py
sink-debug/: debug-sink-luminosity.py  debug-sink.py
video-sink-debug/: video-sink.py
wrapper/: Cargo.toml
wrapper/src/: lib.rs
